fix navbar overflow

--- a/themes/kaze_custom/source/css/_pages/widgets/nav.styl
+++ b/themes/kaze_custom/source/css/_pages/widgets/nav.styl
@@ -59,6 +59,7 @@
     display: flex
     margin-right: 0
     justify-content: center
+    overflow: auto
 @media (max-width: 586px)
   .navbar-menu
     display: flex
